--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <canvas width="640" height="480" class="game-canvas" id="game-canvas"></canvas>
+    <canvas class="game-canvas" id="game-canvas"></canvas>
     <script src="remembrance.js"></script>
     <script src="main.js"></script>
 </body>
