--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <canvas class="game-canvas" id="game-canvas"></canvas>
+    <div class="scoreboard" id="scoreboard">SCORE: <span class="score" id="score">0</span></div>
     <script src="remembrance.js"></script>
     <script src="main.js"></script>
 </body>
