--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <canvas class="game-canvas" id="game-canvas"></canvas>
-    <div class="scoreboard" id="scoreboard">SCORE: <span class="score" id="score">0</span></div>
+    <div class="timeboard" id="timeboard">TIMER <span class="time" id="time">0</span>s</div>
+    <div class="scoreboard" id="scoreboard"><span class="score" id="score">0</span> SCORE</div>
     <script src="remembrance.js"></script>
     <script src="main.js"></script>
 </body>
