Starts instructions/legend.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <canvas class="game-canvas" id="game-canvas"></canvas>
+    <div class="legend" id="legend">
+        <div>LEFT</div>
+        <div>UP</div>
+        <div>RIGHT</div>
+        <div>DOWN</div>
+        <div>press SPACE to start</div>
+    </div>
     <div class="timeboard" id="timeboard">TIMER <span class="time" id="time">0</span>s</div>
     <div class="scoreboard" id="scoreboard"><span class="score" id="score">0</span> SCORE</div>
     <script src="remembrance.js"></script>
