Finishes all major features.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="item" id="up">UP</div>
         <div class="item" id="right">RIGHT</div>
         <div class="item" id="down">DOWN</div>
-        <div class="item start">press <span>SPACE</span> to start</div>
+        <div class="start">press <span>SPACE</span> to start</div>
     </div>
-    <div class="timeboard" id="timeboard">TIMER <span class="time" id="time">0</span>s</div>
+    <div class="timeboard" id="timeboard">TIMER <span class="time" id="time">20</span>s</div>
     <div class="scoreboard" id="scoreboard"><span class="score" id="score">0</span> SCORE</div>
     <script src="remembrance.js"></script>
     <script src="main.js"></script>
