--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <canvas class="game-canvas" id="game-canvas"></canvas>
     <div class="legend" id="legend">
-        <div class="item" id="left">LEFT</div>
-        <div class="item" id="up">UP</div>
-        <div class="item" id="right">RIGHT</div>
-        <div class="item" id="down">DOWN</div>
+        <div class="item" id="up">WILLIAM</div>
+        <div class="item" id="right">JEAN</div>
+        <div class="item" id="down">MICHAEL</div>
+        <div class="item" id="left">STEPHEN</div>
         <div class="start">press <span>SPACE</span> to start</div>
     </div>
     <div class="timeboard" id="timeboard">TIMER <span class="time" id="time">20</span>s</div>
